# chunk_codec

./: .gitignore  CMakeLists.txt  README.md  combine_videos.sh  compile_commands.json  filelist.txt  plot.jl  run_quality_metrics.py  vp9_video_chunks.sh
.cache/clangd/index/: chunk_video.cpp.FA337D94721A7579.idx  combine_videos.cpp.09F2AA30B951DC40.idx  scene_change.cpp.361B2C8D723D0A41.idx  video_info.cpp.A19C3D22F5C27460.idx
src/: chunk_video.cpp  scene_change.cpp  video_info.cpp
